--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
   <meta name="description" content="Two Brothers make a Game">
   <meta name="keywords" content="platformer">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <script src="phaser.js" type="text/javascript"></script>
+  <script type="text/javascript" src="phaser.min.js"></script>
   <script src="js/boot.js" type="text/javascript"></script>
   <script src="js/load.js" type="text/javascript"></script>
   <script src="js/menu.js" type="text/javascript"></script>
   <script src="js/play.js" type="text/javascript"></script>
-  <script src="js/win.js" type="text/javascript"></script>
-  <script src="js/lose.js" type="text/javascript"></script>
   <script src="js/game.js" type="text/javascript"></script>
 </head>
 
 <body>
-<div id="gameDiv">
-  
-</div>
+  <div id="gameDiv">
+
+  </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 </body>
 
